[gd_scene load_steps=10 format=3 uid="uid://csgfoswkmgt1i"]

[ext_resource type="Script" path="res://Scripts/Entity/player_reworked.gd" id="1_yv2jx"]
[ext_resource type="SpriteFrames" uid="uid://685sltxjoua6" path="res://Art/Sprite Frames/bear_animation.tres" id="2_u4lx3"]
[ext_resource type="SpriteFrames" uid="uid://p3thu3ifg0hc" path="res://Art/Sprite Frames/owl_animations.tres" id="3_hpwdt"]
[ext_resource type="Script" path="res://Scripts/Components/pushable.gd" id="3_k1sb3"]
[ext_resource type="SpriteFrames" uid="uid://dshn8qb23el1p" path="res://Art/Sprite Frames/frog_animation.tres" id="4_is0fi"]
[ext_resource type="SpriteFrames" uid="uid://be55fdyu4jamo" path="res://Art/Sprite Frames/turtle_animation.tres" id="5_qwon5"]
[ext_resource type="PackedScene" uid="uid://blijb2mvjklth" path="res://Scenes/Components/health.tscn" id="6_v2km7"]
[ext_resource type="Script" path="res://Scripts/Components/aquatic.gd" id="8_i0nre"]
[ext_resource type="AudioStream" uid="uid://brwol3c5xkxyw" path="res://Sound/Ambience/ForestAmbience.wav" id="5_c7var"]
[ext_resource type="AudioStream" uid="uid://tvdhh75lopo8" path="res://Sound/Jumps/Jump_1.wav" id="7_7nyft"]
[ext_resource type="AudioStream" uid="uid://b05hn44b8uy5a" path="res://Sound/Death/BearDeath.wav" id="8_t7rqj"]


[sub_resource type="RectangleShape2D" id="RectangleShape2D_g7avb"]
size = Vector2(25, 60)

[node name="Player" type="CharacterBody2D"]
z_index = 2
texture_filter = 1
collision_mask = 15
script = ExtResource("1_yv2jx")
sprite_frames = Array[SpriteFrames]([ExtResource("2_u4lx3"), ExtResource("3_hpwdt"), ExtResource("4_is0fi"), ExtResource("5_qwon5")])
speed = 12000.0
jump_height = 48.0
jump_time_peak = 0.2
jump_time_fall = 0.15

[node name="Health" parent="." instance=ExtResource("6_v2km7")]

[node name="Pushable" type="Node2D" parent="."]
script = ExtResource("3_k1sb3")

[node name="Aquatic" type="Node2D" parent="."]
script = ExtResource("8_i0nre")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -32)
shape = SubResource("RectangleShape2D_g7avb")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -48)

[node name="RespawnTimer" type="Timer" parent="."]

[node name="Audio" type="Node2D" parent="."]

[node name="AudioListener2D" type="AudioListener2D" parent="Audio"]

[node name="GrassFootsteps" type="AudioStreamPlayer2D" parent="Audio"]

[node name="Ambience" type="AudioStreamPlayer2D" parent="Audio"]
stream = ExtResource("5_c7var")
volume_db = -8.0
autoplay = true

[node name="Jump" type="AudioStreamPlayer2D" parent="Audio"]
stream = ExtResource("7_7nyft")

[node name="Death" type="AudioStreamPlayer2D" parent="Audio"]
stream = ExtResource("8_t7rqj")

[node name="Select" type="AudioStreamPlayer" parent="Audio"]

[connection signal="died" from="Health" to="." method="_on_died"]
[connection signal="pushed" from="Pushable" to="." method="_on_pushed"]
[connection signal="dived" from="Aquatic" to="." method="_on_dived"]
[connection signal="surfaced" from="Aquatic" to="." method="_on_surfaced"]
